--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
-    "restore-categories": "node scripts/restore-categories.js"
+    "restore-categories": "node scripts/restore-categories.js",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@google-cloud/vision": "^5.3.4",
