--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/recurring",
       "schedule": "0 6 * * *"
+    },
+    {
+      "path": "/api/cron/expire-groups",
+      "schedule": "0 * * * *"
     }
   ]
 }
