--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "19.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.5.0",
     "resend": "^6.5.2",
     "sharp": "^0.34.5",
